# tempo

./: README.md
backend/: README.md
backend/PDFBrain/: .replit  config.py  database.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  schemas.py
backend/PDFBrain/routers/: chat_router.py  pdf_router.py  quiz_router.py
backend/PDFBrain/services/: gemini_service.py  pdf_processor.py  quiz_generator.py
backend/PDFBrain/static/: index.html  script.js  styles.css
backend/PDFBrain/uploads/: .gitkeep
backend/app/: main.py
backend/app/database/: db.py
backend/app/middleware/: auth.py
backend/app/routers/: chatbot.py
backend/app/routes/: websockets.py
backend/app/schemas/: agents.py  auth.py  embedding.py
backend/app/services/: embedding_service.py
backend/app/utils/: auth.py
backend/requirements/: base.txt  dev.txt  prod.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIChatInterface.tsx  ActionButtons.tsx  ChatView.tsx  CreateGoalDialog.tsx  Dashboard.tsx  LandingPage.tsx  Login.tsx  ManipulatePanel.tsx  MessageBubble.tsx  Navigation.tsx  NotesSection.tsx  PDFContent.tsx  PDFUploadCard.tsx  Profile.tsx  QuizGenerationDialog.tsx  QuizView.tsx  RecentUploads.tsx  StudySparkApp.tsx  ThemeSwitcher.tsx  Workshops.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: variants.ts
frontend/src/pages/: Index.tsx  Login.tsx  Signup.tsx  TextEditor.tsx  split.css
frontend/src/store/: AuthContext.tsx  Store.tsx  (+1 more)
(+8 files in other folders)
